<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceBase</string>
    <string name="logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="tagline">Sense your surroundings</string>
    <string name="begin_journey">journey here</string>
    <string name="begin_app">Go</string>
    <string name="login">Login</string>
    <string name="login_title">Good to see you</string>
    <string name="login_instructions">Enter your username and password</string>
    <string name="sign_up_title">Join</string>
    <string name="sign_up_instructions">PlaceBase lets you record and retrieve geotagged messages. Get personal with the spaces around you where people have stood before.</string>
    <string name="sign_up_username">Select a username:</string>
    <string name="sign_up_password">Enter a password:</string>
    <string name="sign_up_btn">Create New Account</string>
    <string name="title_activity_map">Map</string>
    <string name="record">Record</string>
    <string name="saved_spaces">Saved Spaces</string>
    <string name="user_stories">My Traces</string>
    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="get_message">Get Message</string>
    <string name="title_activity_sense">SenseActivity</string>
    <string name="recordsense_title">The Five Senses</string>
    <string name="confirm_recording">Message Recorded!</string>
    <string name="recordsense_instructions">How will people sense your story?</string>
    <string name="perspective_title">Your Perspective</string>
    <string name="perspective_instructions">Face the direction you want people to stand in.</string>
    <string name="perspective_instructions2">Take a picture to record it.</string>
    <string name="perspective_get_psyched">Get Ready</string>
    <string name="perspective_record_cta">Record Perspective</string>
    <string name="story_confirm">Success.</string>
    <string name="story_confirm_addl">You left a trace.</string>
    <string name="jouney_distance">METERS AWAY</string>
    <string name="title_activity_confirm_trace">Confirm Trace</string>
    <string name="title_activity_caption">Caption</string>
    <string name="caption_hint">What happened here?</string>
    <string name="btn_done">Next</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="title_activity_user">Checking User</string>
    <string name="title_activity_perspective">PerspectiveActivity</string>
    <string name="getting_location">Finding Precise Location...</string>
    <string name="title_activity_retrieve_video">RetrieveVideo</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_retrieve_audio">RetrieveAudio</string>
    <string name="title_activity_retrieve_image">RetrieveImage</string>
    <string name="comments">comments</string>
    <string name="story">story</string>
    <string name="comment">comment</string>
    <string name="comment_hint">What do you think?...</string>
    <string name="encounters">encounters</string>
    <string name="i_sense_it">What do you sense?</string>
    <string name="title_activity_user_places">My Places</string>
    <string name="action_settings">Settings</string>
    <string name="nostories">Your personal stories are collected here.</string> 
    <string name="nostories2">Looks like you don\'t have any.</string>
    <string name="nostories3">Time to scout a place to storytell.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout">Are you sure?</string>
    

</resources>