<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".StartActivity" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/bgimage_launcher"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            android:src="@drawable/bgimage_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark"
                android:src="@drawable/logo_placebase" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/background_dark"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_newuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:background="@android:color/background_dark"
                    android:text="@string/sign_up_btn"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tagline"
                android:textSize="22sp" />

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>