<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_skittles"
    tools:context=".NewUser" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/signup_title"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_title"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/signup_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#66000000"
                    android:padding="10dp"
                    android:paddingBottom="25dp"
                    android:text="@string/sign_up_instructions"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:background="#66000000"
                android:orientation="vertical"
                android:padding="5dp" >

                <EditText
                    android:id="@+id/new_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="your username"
                    android:inputType="textPersonName"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />

                <EditText
                    android:id="@+id/new_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_new_user"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight=".1"
                android:text="@string/sign_up_btn" />

        </LinearLayout>

</RelativeLayout>