<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Caption" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:background="#333333" >

            <ImageView
                android:id="@+id/recent_photo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:fitsSystemWindows="true" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight=".4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/caption_title"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_caption" />

            <EditText
                android:id="@+id/edit_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/caption_hint"
                android:inputType="textMultiLine"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_caption_done"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:focusableInTouchMode="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:selectAllOnFocus="true"
                    android:text="@string/btn_done" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:background="#bababa" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" >

                <ImageButton
                    android:id="@+id/btn_close_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:cropToPadding="true"
                    android:padding="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_close" />

                <ImageView
                    android:id="@+id/user_media_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progressbar_1" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>