<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/media_stubs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.74"
        android:background="#000000"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/media_stubs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ViewStub
                android:id="@+id/audio_stub"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

            <ViewStub
                android:id="@+id/image_stub"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

            <ViewStub
                android:id="@+id/video_stub"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/story_senses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#33ffffff"
            android:gravity="right" >

            <ImageView
                android:id="@+id/story_hear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_sense_hear" />

            <ImageView
                android:id="@+id/story_see"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_sense_see" />

            <ImageView
                android:id="@+id/story_smell"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_sense_smell" />

            <ImageView
                android:id="@+id/story_taste"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_sense_taste" />

            <ImageView
                android:id="@+id/story_touch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_sense_touch" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/media_meta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-30dp"
        android:layout_weight="0.24"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/encounters_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/num_encounters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="#cccccc"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/title_encounters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/encounters" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/comments_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/num_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#cccccc"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/title_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/geo_user_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight=".4"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/meta_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/meta_geo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btn_to_map"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_black_trans" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/media_senses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.19"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/senses_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_sense_it" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/media_hear"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="0"
                android:background="@drawable/btn_sense_bg_false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sense_hear" />

            <ImageButton
                android:id="@+id/media_see"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:background="@drawable/btn_sense_bg_false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sense_see" />

             <ImageButton
                 android:id="@+id/media_smell"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_margin="3dp"
                 android:layout_weight="0"
                 android:background="@drawable/btn_sense_bg_false"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_sense_smell" />

              <ImageButton
                  android:id="@+id/media_taste"
                  android:layout_width="60dp"
                  android:layout_height="60dp"
                  android:layout_margin="3dp"
                  android:layout_weight="0"
                  android:background="@drawable/btn_sense_bg_false"
                  android:scaleType="centerCrop"
                  android:src="@drawable/ic_sense_taste" />

               <ImageButton
                   android:id="@+id/media_touch"
                   android:layout_width="60dp"
                   android:layout_height="60dp"
                   android:layout_margin="3dp"
                   android:layout_weight="0"
                   android:background="@drawable/btn_sense_bg_false"
                   android:scaleType="centerCrop"
                   android:src="@drawable/ic_sense_touch" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>